crates/reinhardt-core/crates/macros/tests/ui/model/fail/no_primary_key.stderr
error: expected attribute arguments in parentheses: #[field(...)]
 --> tests/ui/model/fail/no_primary_key.rs:9:4
  |
9 |     #[field]
  |       ^^^^^
